--- a/EMS/core-bundle/src/Resources/translations/emsco-contenttype.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-contenttype.en.yml
@@ -1,5 +1,5 @@
 contenttype:
     action:
         modal_import:
-            submit: 'Import'
-            cancel: 'Cancel'
+            submit: Import
+            cancel: Cancel
