--- a/EMS/core-bundle/src/Resources/translations/emsco-environment.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-environment.en.yml
@@ -6,16 +6,13 @@ environment:
     edit:
         title: 'Edit the environment "%name%"'
         short_title: 'Edit environment'
-        notice_rename: | 
-            If you intend to rename the alias, 
-            please create a new environment and align it to the one you would like to rename the alias.
-            Then delete the previous one.
-        save: 'Update'
+        notice_rename: "If you intend to rename the alias, \nplease create a new environment and align it to the one you would like to rename the alias.\nThen delete the previous one.\n"
+        save: Update
     property:
         name: Name
         label: Label
         color: Color
-        rolePublish: Publish role
+        rolePublish: 'Publish role'
         base_url: 'Base URL'
         template_publication: 'Publication template'
         option:
