--- a/EMS/core-bundle/src/Resources/translations/emsco-user.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-user.en.yml
@@ -1,6 +1,6 @@
 user:
     option:
-        title: 'Options'
+        title: Options
         simplified_ui: 'Simplified UI'
     login:
         title: 'Sign in to start your session'
@@ -11,34 +11,24 @@ user:
         submit: 'Log in'
     logout:
         submit: 'Sign out'
-        exit: 'Exit'
+        exit: Exit
     logged_in:
         title: 'Logged in as %username%'
         member_since: 'Member since %date%'
-    new_password: New password
-    new_password_confirmation: Repeat new password
+    new_password: 'New password'
+    new_password_confirmation: 'Repeat new password'
     management:
-        title: User management
+        title: 'User management'
     profile:
-        title: Your profile
+        title: 'Your profile'
     change_password:
         title: 'Change your password'
         cancel: Cancel
         submit: 'Change password'
     resetting:
-        title: Reset password
-        username_email: Username or email address
-        check_email: |
-            An email has been sent. It contains a link you must click to reset your password.
-            Note: You can only request a new password once within %tokenLifetime% hours.
-
-            If you don't get an email check your spam folder or try again.
+        title: 'Reset password'
+        username_email: 'Username or email address'
+        check_email: "An email has been sent. It contains a link you must click to reset your password.\nNote: You can only request a new password once within %tokenLifetime% hours.\n\nIf you don't get an email check your spam folder or try again.\n"
         email:
             subject: 'Reset Password'
-            message: |
-                Hello %username%!
-                
-                To reset your password - please visit %confirmationUrl%
-                
-                Regards,
-                the Team.
+            message: "Hello %username%!\n\nTo reset your password - please visit %confirmationUrl%\n\nRegards,\nthe Team."
