refactor(dashboard): def for quick_search and landing
Created a new unique dashboard definition property. To define a quick_search or landing_page

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -433,14 +433,16 @@ dashboard:
             name: Name
             label: Label
             type: Type
-            landing_page: 'Landing page'
-            quick_search: 'Quick search'
+            definition: Definition
             public: Public
+    definition:
+        quick_search: 'Quick search'
+        landing_page: 'Landing page'
     actions:
         define:
             title: 'Define'
-            set_quick_search: 'As quick search'
-            set_landing_page: 'As landing page'
+            quick_search: 'As quick search'
+            landing_page: 'As landing page'
         delete_selected: 'Deleted selected'
         edit: Edit
         delete: Delete
