feat: Forms in side menu

--- a/EMS/core-bundle/src/Resources/translations/emsco-twigs.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-twigs.en.yml
@@ -146,6 +146,7 @@ views:
             admin: Admin
             content-types: 'Content types'
             environments: Environments
+            forms: Forms
             search: Search
             i18n: I18N
             jobs: Jobs
