--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -449,6 +449,7 @@ dashboard:
             browser_image: 'As image browser'
             browser_object: 'As object browser'
             browser_file: 'As file browser'
+        undefine: 'Undefine'
         delete_selected: 'Deleted selected'
         edit: Edit
         delete: Delete
