feat: Custom options edit button in the user datatable

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -833,6 +833,7 @@ uploaded-file:
     delete-confirm: 'This will be removed'
 user:
     action:
+        custom_edit: 'Custom options'
         delete: Delete
         delete_confirm: 'Delete this user?'
         disable: Disable
