feat: First (and empty) custom options form

--- a/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
@@ -1,4 +1,6 @@
 form:
+    form:
+        action: Action
     name: Name
     label: Label
     create: Create
@@ -962,6 +964,8 @@ schedule:
     save: Save
     saveAndClose: 'Save and Close'
 user:
+    custom-options:
+        save: 'Save custom options'
     locale: 'Language UI'
     locale_preferred: 'Language preferred'
     display_name: 'Display name'
