--- a/EMS/core-bundle/src/Resources/translations/emsco-twigs.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-twigs.en.yml
@@ -1,3 +1,7 @@
+users:
+    custom_edit:
+        title: '%username%''s custom options'
+        breadcrumb: 'Custom options'
 form:
     edit:
         title: 'Edit a form'
