--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -195,6 +195,7 @@ log:
     locked_exception_error: 'Document "%label%" is currently locked by %username%'
     privilege_exception_error: 'You don''t have enough privileges to edit this document'
     user:
+        custom-updated: '%user_display_name%''s custom options have been updated'
         api_key: 'New API key for the user %user_display_name%: %api_key%'
         deleted: 'The user %user_display_name% has been deleted'
         disabled: 'The user %user_display_name% has been disabled'
