--- a/demo/skeleton/translations/messages.nl.yaml
+++ b/demo/skeleton/translations/messages.nl.yaml
@@ -1,6 +1,65 @@
+aria:
+    back-to-top: 'Back to top'
+blog:
+    intro: 'Tous les 2 mois, l''équipe eMS met en évidence des nouveaux sujets liés à elasticMS et des astuces IT.'
+    title: 'Blog'
+breadcrumb:
+    back-to: 'Terug naar'
+    homepage: homepagina
+cookie:
+    close: 'Ik begrijp het!'
+    closeAll: 'cookies voor sociale media'
+    closeSite: 'functionele cookies'
+    link: 'Meer weten'
+    text: 'Wij gebruiken cookies op deze site om de gebruikerservaring te verbeteren.'
+ems_form:
+    loading: 'bezig met laden...'
 error:
-    target-not-found: 'Page not found'
+    404:
+        description: 'erreur 404 description'
+        title: 'Pagina niet gevonden'
+    target-not-found: 'Page non trouvée'
+features:
+    discover: 'Ontdek alle features'
+footer:
+    join-us-github: 'Join-us on GitHub'
+js:
+    file_selected: '%count% files selected'
+    form_error: 'The form faced an issue : %message%'
+    form_error_try_later: 'The form faced an issue, please try again later'
+    form_processed: 'Your message was sent'
+    form_saved: 'Your message was sent'
+language:
+    selection: 'select language'
+missing:
+    but-available-in: 'Version en nederlands :'
+    description: 'Voir ci-dessous pour des versions alternatives.'
+    title: 'Ce contenu n''est pas disponible en nederlands'
+month:
+    April: April
+    August: Augustus
+    December: December
+    February: Februari
+    January: Januari
+    July: Juli
+    June: Juni
+    March: Maart
+    May: Mei
+    November: November
+    October: oktober
+    September: September
 navbar:
     swith-to-locale: Nederlands
 site:
-    name: 'Demo website'
+    copy: Copyright
+    lead: 'Een CMS op maat voor de openbare sector'
+    name: 'elasticms website'
+    news_title: 'What''s new?'
+    site_name: ems-promo
+usergroup:
+    facilitator: 'Facilitator voor de volgende user group'
+    intro: 'Schrijf u in en neem deel aan de volgende online activiteit van de User Group.'
+    next-event: 'Datum en uur'
+    team-meeting: Duur
+    title: 'Volgende sessie'
+    topic: Onderwerpen
