--- a/demo/skeleton/translations/messages.nl.yaml
+++ b/demo/skeleton/translations/messages.nl.yaml
@@ -2,7 +2,7 @@ aria:
     back-to-top: 'Back to top'
 blog:
     intro: 'Tous les 2 mois, l''équipe eMS met en évidence des nouveaux sujets liés à elasticMS et des astuces IT.'
-    title: 'Blog'
+    title: Blog
 breadcrumb:
     back-to: 'Terug naar'
     homepage: homepagina
@@ -12,6 +12,8 @@ cookie:
     closeSite: 'functionele cookies'
     link: 'Meer weten'
     text: 'Wij gebruiken cookies op deze site om de gebruikerservaring te verbeteren.'
+ems:
+    back_to_ems: 'Terug naar eMS'
 ems_form:
     loading: 'bezig met laden...'
 error:
@@ -31,6 +33,7 @@ js:
     form_saved: 'Your message was sent'
 language:
     selection: 'select language'
+locale: Nederlands
 missing:
     but-available-in: 'Version en nederlands :'
     description: 'Voir ci-dessous pour des versions alternatives.'
