ref: landing page meta title

--- a/demo/skeleton/translations/messages.fr.yaml
+++ b/demo/skeleton/translations/messages.fr.yaml
@@ -56,9 +56,9 @@ navbar:
 site:
     copy: Copyright
     lead: 'Un CMS sur mesure au service du secteur public'
-    name: 'site web elasticms'
+    name: elasticMS
     news_title: 'What''s new?'
-    site_name: ems-promo
+    site_name: elasticMS
 usergroup:
     facilitator: 'Présentateur du prochain User Group'
     intro: 'Inscrivez-vous et participez à la prochaine activité online du User Group.'
