--- a/demo/skeleton/translations/messages.nl.yaml
+++ b/demo/skeleton/translations/messages.nl.yaml
@@ -58,7 +58,7 @@ site:
     lead: 'Een CMS op maat voor de openbare sector'
     name: elasticMS
     news_title: 'What''s new?'
-    site_name: elasticMS
+    short_name: elasticMS
 usergroup:
     facilitator: 'Facilitator voor de volgende user group'
     intro: 'Schrijf u in en neem deel aan de volgende online activiteit van de User Group.'
