--- a/demo/skeleton/translations/messages.fr.yaml
+++ b/demo/skeleton/translations/messages.fr.yaml
@@ -1,5 +1,6 @@
 aria:
     back-to-top: 'Back to top'
+    skip-to-content: 'Passer directement au contenu'
 blog:
     intro: 'Tous les 2 mois, l''équipe eMS met en évidence des nouveaux sujets liés à elasticMS et des astuces IT.'
     title: Blog
@@ -54,7 +55,7 @@ month:
 navbar:
     swith-to-locale: Français
 site:
-    copy: Copyright
+    copy: 'Copyright %year%'
     lead: 'Un CMS sur mesure au service du secteur public'
     name: elasticMS
     news_title: 'What''s new?'
