--- a/demo/skeleton/translations/messages.nl.yaml
+++ b/demo/skeleton/translations/messages.nl.yaml
@@ -1,6 +1,9 @@
 aria:
     back-to-top: 'Back to top'
+    navbar:
+        active-item: actief
     skip-to-content: 'Ga onmiddellijk naar de inhoud'
+    toggle-navbar: 'Toon navigatie'
 blog:
     intro: 'Tous les 2 mois, l''équipe eMS met en évidence des nouveaux sujets liés à elasticMS et des astuces IT.'
     title: Blog
