--- a/demo/skeleton/translations/messages.fr.yaml
+++ b/demo/skeleton/translations/messages.fr.yaml
@@ -11,7 +11,7 @@ blog:
     intro: 'Tous les 2 mois, l''équipe eMS met en évidence des nouveaux sujets liés à elasticMS et des astuces IT.'
     title: Blog
 breadcrumb:
-    back-to: 'Retour à la page'
+    back-to: 'Retour à la page %title%'
     homepage: 'd''accueil'
 cookie:
     close: 'J''ai compris !'
