--- a/demo/skeleton/translations/messages.nl.yaml
+++ b/demo/skeleton/translations/messages.nl.yaml
@@ -11,7 +11,7 @@ blog:
     intro: 'Tous les 2 mois, l''équipe eMS met en évidence des nouveaux sujets liés à elasticMS et des astuces IT.'
     title: Blog
 breadcrumb:
-    back-to: 'Terug naar'
+    back-to: 'Terug naar  %title%'
     homepage: homepagina
 cookie:
     close: 'Ik begrijp het!'
